feat: [KP]-working on document processing, implement retry api of document process
